WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117662
Threaded HTML parser can ASSERT in some situations
https://bugs.webkit.org/show_bug.cgi?id=117662
Summary
Threaded HTML parser can ASSERT in some situations
Adam Barth
Reported
2013-06-14 15:29:21 PDT
Threaded HTML parser can ASSERT in some situations
Attachments
Patch
(5.94 KB, patch)
2013-06-14 15:33 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-06-14 15:33:09 PDT
Created
attachment 204738
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-14 16:05:55 PDT
Comment on
attachment 204738
[details]
Patch Clearing flags on attachment: 204738 Committed
r151611
: <
http://trac.webkit.org/changeset/151611
>
WebKit Commit Bot
Comment 3
2013-06-14 16:05:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug